# dev-workflow

./: Makefile  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-project-structure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-REVIEWS.md
.planning/phases/02-authentication/: 02-01-PLAN.md  02-01-SECURITY.md  02-01-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-REVIEW-FIX.md  02-REVIEW.md  02-REVIEWS.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-jira-integration-flow-orchestration/: 03-01-PLAN.md  03-02-PLAN.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md
.planning/research/: ARCHITECTURE.md  COMPARISON.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/dev_workflow/: __init__.py  __main__.py
src/dev_workflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dev_workflow/application/: __init__.py  delivery_flow.py
src/dev_workflow/crews/: __init__.py  analyze_crew.yaml  document_crew.yaml  enrich_crew.yaml  fetch_crew.yaml  implement_crew.yaml  pr_crew.yaml  qa_crew.yaml
src/dev_workflow/domain/: __init__.py
src/dev_workflow/domain/models/: __init__.py  credentials.py  (+2 more)
src/dev_workflow/infrastructure/: __init__.py  auth.py  config.py
src/dev_workflow/ports/: __init__.py  github_port.py  jira_port.py
tests/: __init__.py
tests/unit/: __init__.py  test_credentials.py
tests/unit/application/: test_delivery_flow.py
(+8 files in other folders)
